# mealplan

./: .gitignore  Cargo.toml  README.md  conventions.md  prompt-plan.md  spec.md  todo.md
.cursor/rules/: rust.mdc
hack/: install.sh
src/: main.rs  models.rs
