[package]
name = "mealplan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.15"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
